# nix-cmake

./: .clang-format  .gitignore  README.md  flake.nix
docs/: API.md  ARCHITECTURE.md  CMAKE-4.2-FEATURES.md  CMAKE-AS-BUILDER.md  CMAKE2NIX-DESIGN.md  COMPARISONS.md  CPACK-INTEGRATION.md  CPS-INTEGRATION.md  DESIGN.md  FILE-API-STRATEGY.md  FLAKE-PARTS.md  PKG-CONFIG-INTEGRATION.md  RECURSIVE-DISCOVERY.md  ROADMAP.md  ZERO-PATCH.md
examples/cpm-project/: package-lock.cmake
examples/simple-project/: CMakeLists.txt  README.md  cmake-lock.json  flake.nix  main.cpp
lib/: builders.nix  cpm-lock-parser.nix  cps.nix  default.nix  dependency.nix  generators.nix  parseCMakeLists.nix  workspace.nix
lib/toolchains/: default.nix
modules/: flake-parts.nix
pkgs/cmake/: bootstrap.nix  default.nix  setup-hook.sh
pkgs/cmake-compiler-launchers/: default.nix
pkgs/cmake-dependency-hook/: cmakeBuildHook.cmake  default.nix
pkgs/cmake-toolchain-hook/: NixGNUInstallDirs.cmake  cmake-nix-toolchain-hook.sh  cmake-toolchain.nix  default.nix
pkgs/cmake2nix/: CMakeLists.txt  cmake-lock.json  cmake2nix-new.sh  cmake2nix.sh  default.nix
pkgs/cmake2nix-cpp/: README.md
pkgs/cmake2nix-cpp/include/: cmake2nix.hpp
pkgs/cmake2nix-cpp/src/: commands.cpp  discovery.cpp  generator.cpp  lockfile.cpp  main.cpp  parser.cpp  prefetcher.cpp
pkgs/cmake2nix/src/: commands.cpp  discovery.cpp  generator.cpp  lockfile.cpp  main.cpp  parser.cpp  prefetcher.cpp
pkgs/fmt/: default.nix
pkgs/rapids-cmake/: default.nix  hook.cmake
tests/: discovery-multi-test.nix  discovery-test.nix
tests/multi-dependency/: CMakeLists.txt  default.nix  main.cpp
tests/simple-cpm/: CMakeLists.txt  cmake-lock.json  default.nix  main.cpp
tests/simple-fetchcontent/: CMakeLists.txt  default.nix  main.cpp
tests/stdexec/: cmake-lock.json  default.nix  discover.nix
